# firstspawn-monorepo

./: .dockerignore  .editorconfig  .env.example  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  BACKEND.md  CHANGELOG.md  DESIGN.md  HANDOVER.md  PLAN.md  PRD.md  PRODUCT.md  README.md  architecture_analysis.md.resolved  database_schema.md.resolved  docker-compose.yml  firstspawn_architecture_analysis_final.md.resolved  implementation_plan.md  landing_implementation_plan.md  lint_output.txt  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  posthog-setup-report.md  prettier.config.mjs  proxy.ts  skills-lock.json  tsconfig.json  turbo.json
.github/: CODEOWNERS  branch-protection.json  (+2 more)
src/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
src/api/app/: __init__.py  config.py  db.py  main.py  security.py
src/api/app/api/: deps.py
src/api/app/api/v1/: router.py
src/api/app/api/v1/endpoints/: auth.py  health.py
src/api/app/models/: __init__.py  admin.py  agent.py  base.py  game_account.py  moderation.py  plugin.py  reputation.py  review.py  server.py  server_platform.py  types.py  user.py
src/api/app/schemas/: auth.py
src/api/app/services/: email.py
src/api/firstspawn_api.egg-info/: SOURCES.txt
src/api/migrations/: env.py
src/api/migrations/versions/: 001_initial_schema.py  002_schema_v2_fixes_and_reviews.py  002_user_consent_fields.py  003_admins_table.py  004_email_confirmed_at_column.py  005_verification_tokens.py
src/api/tests/: conftest.py  test_auth_integration.py  test_error_handling.py  test_security.py
(+526 files in other folders)
